# Zenith

./: .gitignore  BATCH_PROCESSING_GUIDE.md  BUILD-RELEASE.md  DOWNLOAD_SYSTEM.md  GITHUB_INTEGRATION.md  GRANULAR_TTL_GUIDE.md  README.md  SQLITE_MIGRATION_ROADMAP.md  index.html  latest.json  origin  package-lock.json  package.json  zenith-private.key.pub
scripts/: prepare-update.ps1
src/: App.css  App.jsx  main.jsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: bypass.rs  catalogue.rs  catalogue_commands.rs  commands.rs  hydra_api.rs  main.rs  metadata_service.rs  models.rs  steam_utils.rs  steamui.rs
src-tauri/src/database/: cache_service.rs  commands.rs  history_commands.rs  history_models.rs  history_operations.rs  history_schema.sql  legacy_adapter.rs  migration_utils.rs  migrations.rs  mod.rs  models.rs  operations.rs  schema.sql  ttl_config.rs
src-tauri/src/download/: aria2_service.rs  commands.rs  download_manager.rs  mod.rs  torrent_downloader.rs  types.rs
src/components/: Bypass.jsx  Catalogue.css  Catalogue.jsx  ChangelogModal.css  ChangelogModal.jsx  CustomTitleBar.css  CustomTitleBar.jsx  DlcManager.jsx  DownloadHistory.jsx  DownloadManager.jsx  EditProfileModal.jsx  FeaturedBanner.jsx  FilterItem.css  FilterItem.jsx  FilterSection.css  FilterSection.jsx  GameDetail.jsx  GameGrid.jsx  Header.jsx  Home.jsx  LibraryGrid.jsx  LoadingScreen.jsx  MyLibrary.jsx  SearchBar.css  SearchBar.jsx  Settings.jsx  Sidebar.jsx  SkeletonLoader.jsx  UpdateManager.jsx  UserProfile.jsx
src/data/: bypassGames.json
src/hooks/: useMetadata.js
src/styles/: Bypass.css  ChangelogModal.css  DlcManager.css  EditProfileModal.css  GameDetail.css  Header.css  LoadingScreen.css  MyLibrary.css  SkeletonLoader.css  UpdateManager.css  UserProfile.css
