[package]
name = "app"
version = "2.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
reqwest = { version = "0.11", features = ["json"] }
bytes = "1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
zip = "0.6"
anyhow = "1.0"
walkdir = "2.3"
regex = "1.0"
tempfile = "3.0"
lazy_static = "1.4"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.29", features = ["bundled", "chrono"] }
serde_rusqlite = "0.33"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
